Fixed hard to read font for left column dates, 0.1.3

--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,7 @@ body > div > article > div > section:last-child {
 }
 
 .content-cat p {
+  font-family: "Open Sans";
   font-size:0.55em;
   font-weight:600;
   
